2005-05-05  Hans-Peter Nilsson  <hp@axis.com>

	* Makefile.am (INCLUDES): Don't -D_GNU_SOURCE here.
	* configure.in: Call AC_GNU_SOURCE here, after AC_PROG_CC.
	* configure, config.in, Makefile.in: Regenerate.
	* sysdep.h (stpcpy): Revert last change.

2005-05-05  Hans-Peter Nilsson  <hp@axis.com>

	* sysdep.h (stpcpy): Wrap declaration in parentheses.

2005-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (ARCH_SIZE): New.
	(LOG_SECTION_ALIGN): Likewise.
	(elfNN_ia64_create_dynamic_sections): Use LOG_SECTION_ALIGN to
	align relocation sections.
	(get_fptr): Likewise.
	(get_reloc_section): Likewise.
	(elfNN_ia64_tprel_base): Likewise.
	(elfNN_ia64_check_relocs): Support 32bit relocations.
	(allocate_global_fptr_got): Likewise.
	(allocate_dynrel_entries): Likewise.
	(set_got_entry): Likewise.
	(set_pltoff_entry): Likewise.
	(elfNN_ia64_relocate_section): Likewise.

2005-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Add AC_CHECK_DECLS(stpcpy).
	* configure: Regenerate.
	* config.in: Likewise.

	* sysdep.h (stpcpy): New.

2005-05-04  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	aix386-core.c, aix5ppc-core.c, aout-adobe.c, aout-arm.c,
	aout-cris.c, aout-ns32k.c, aout-sparcle.c, aout-target.h,
	aout-tic30.c, aout0.c, aout32.c, aout64.c, aoutf1.h, aoutx.h,
	archive.c, archive64.c, archures.c, armnetbsd.c, bfd-in.h,
	bfd-in2.h, bfd.c, bfdio.c, bfdwin.c, binary.c, bout.c, cache.c,
	cf-i386lynx.c, cf-m68klynx.c, cf-sparclynx.c, cisco-core.c,
	coff-a29k.c, coff-alpha.c, coff-apollo.c, coff-arm.c, coff-aux.c,
	coff-go32.c, coff-h8300.c, coff-h8500.c, coff-i386.c, coff-i860.c,
	coff-i960.c, coff-ia64.c, coff-m68k.c, coff-m88k.c, coff-maxq.c,
	coff-mcore.c, coff-mips.c, coff-or32.c, coff-pmac.c, coff-ppc.c,
	coff-rs6000.c, coff-sh.c, coff-sparc.c, coff-stgo32.c,
	coff-svm68k.c, coff-tic30.c, coff-tic4x.c, coff-tic54x.c,